# OmoideOld

./: README.md  pyproject.toml  run_app.sh  run_index.sh
.github/workflows/: pythonapp.yml
ad_hoc/logs_parse/: code.py  constants.py  main.py
ad_hoc/split_files/: main.py
ad_hoc/uuid_cache_reformat/: main.py
documentation/architectural_decision_records/: omoide2.md
documentation/russian/: expenses.md  json.md  upload_admin.md  upload_user.md
omoide/: __main__.py  utils.py
omoide/app_server/: app.py  class_web_query.py  implementation.py  logic.py  singleton.py
omoide/app_server/templates/: 404.html  base.html  error.html  help.html  index.html  macros.html  navigation.html  newest.html  preview.html  tags.html
omoide/application/: app.py  app_factory.py  class_paginator.py  constants.py  database.py  logic.py  singleton.py
omoide/application/static/: base.css  code.js  search.css  styles.css
omoide/commands/: instances.py  perform.py
omoide/constants/: __init__.py  media.py  project.py  server.py  storage.py
omoide/database/: operations.py
omoide/index_server/: app.py  constants.py  conversion.py  find.py  implementation.py  index.py  index_server.http  logic.py  objects.py  reload.py  runserver.py  search_engine.py  singleton.py  status.py  structures.py
omoide/infra/: __init__.py  class_filesystem.py  class_stdout.py  singleton_type.py  walking.py
omoide/search_engine/: class_index.py  class_query_builder.py  class_statistics.py
other/: nginx.conf  omoide.service  omoide_app.service  omoide_index.service  sites-available.conf
(+84 files in other folders)
